assets/css/style.css
/*----------General-------*/

body {
	font-family: 'Manrope', sans-serif;
}

.page-headings {
	font-family: 'Lobster', cursive;
	font-weight: 700;
	color: white;
	text-align: center;
	letter-spacing: 2px;
}

.page-headings h1 {
	padding-top: 20px;
	padding-bottom: 30px;
}

.bg-image-text {
	color: white;
}


/*--------------------------------------------------Backgroud Images*/

.bg-image-1 {
	min-height: 100vh;
	/*--healthy-garden image from pixabay*/
	background: url("../images/healthy-garden.jpg") no-repeat top left fixed;
}

.contact-image {
	/*--Contact-image from pixabay*/
	background: url("../images/contact-image.jpg") no-repeat bottom right fixed;
}


/*--Service info image from pixabay*/

.service-info {
	background: url("../images/ivy.jpg");
	padding-top: 30px;
	padding-bottom: 30px;
}

.bg-image {
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	display: block;
	justify-content: center;
}

/*-----------------------------------------------Navigation bar*/

header.container-fluid {
	padding-left: 0;
	padding-right: 0;
}

.navbar-brand {
	font-family: 'Lobster', cursive;
	text-decoration: none;
	color: black;
}

.navbar-brand:hover {
	color: gray;
}

.nav-link {
	text-decoration: none;
	color: black;
	text-align: center;
}

.nav-link:hover {
	background: rgba(80, 80, 80, 0.5);
	color: white;
	text-decoration: none;
	border-radius: 15px;
}

.nav-item {
	padding: 10px;
}

.alert-warning {
	text-align: center;
}


/*-------------------------------------------Footer---*/

.footer {
	position: fixed;
	bottom: 0;
	color: antiquewhite;
}

.social-links>a {
	float: right;
	padding: 3px;
	font-size: 25px;
	color: #D8D8D8;
}

.social-links>a:hover {
	color: white;
}

.phone-link {
	color: lightgray;
}

.phone-link:hover {
	color: gray;
}


/*---------------------------------------------------Index Page------*/

.index-heading {
	font-family: 'Lobster', cursive;
	color: seashell;
	padding: 30px;
	text-align: center;
}

.nav-link.index-nav-link {
	font-weight: bolder;
	text-decoration: none;
	color: white;
	text-align: right;
}

.bg-index-nav {
	background: rgba(00, 00, 00, 0.7);
}

.index-info {
	background: rgba(00, 00, 00, 0.7);
	color: white;
	font-family: 'Lobster', cursive;
	padding: 20px;
	text-align: center;
}

@media screen and (min-width: 601px) {
	.index-text {
		font-size: 35px;
	}
	.index-heading {
		font-size: 60px;
	}
}


/*---------------------------------------------------Services Page----*/


/*----------Cards-----*/

.card {
	margin: 0 auto;
	text-align: center;
	border-width: 5px;
	width: 18rem;
}

.service-card {
	padding-top: 20px;
}

.service-cards-row {
	padding-bottom: 40px;
}


/*-------------Process section-------*/

.process {
	background: white;
	text-align: center;
	padding-top: 20px;
	padding-bottom: 20px;
}

.process-heading {
	font-family: 'Lobster', cursive;
	padding-top: 20px;
}

.steps {
	text-align: center;
}

.steps-icon {
	font-size: 40px;
}

.steps p {
	padding: 10px;
}

.step-1 {
	background: mediumseagreen;
}

.step-2 {
	background: #6ECF9A;
}

.step-3 {
	background: #A8E2C2;
}


/*-----------Choose us section-------*/

.choose-us {
	background-color: #A7D3A6;
	text-align: center;
	color: black;
	padding-top: 30px;
	padding-bottom: 100px;
}

.choose-us h3 {
	padding-top: 20px;
	padding-bottom: 20px;
}

.choose-us p {
	padding-left: 40px;
	padding-right: 40px;
}

.choose-us a {
	color: gray;
}

.choose-us a:hover {
	color: white;
	text-decoration: none;
}


/*---------------------------------------------------Gallery Page------*/

.gallery {
	padding-top: 30px;
	margin: 0 auto;
	background-color: mediumseagreen;
	padding-bottom: 100px;
}

.blockquote {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 150px;
	padding: 10px;
	font-size: 1em;
}

.gallery-pic {
	margin-bottom: 20px;
	text-align: center;
}

.card-single{
	width: 100%;
    height: 100%;
    transform-style: preserve-3d;
	transition: all 0.7s ease;
    padding-right: 1rem;
}

.card-single:hover{
	transform:rotateY(180deg)
}

.card-front{
	position:absolute;
	height:100%;
	width:100%;
	backface-visibility: hidden;
}

.card-back{
	position:absolute;
	margin-right:1rem;
	background:gray;
	font-family: 'Lobster', cursive;
	border-radius:10px;
	color:white;
	backface-visibility:hidden;
	height:100%;
	transform: rotateY(180deg);
}

.quotes-row {
	background-color: #A7D3A6;
}


/*-----------Contact page------*/

.jumbotron-container {
	padding-bottom: 40px;
}

.contact-heading{
	font-size:3rem;
	text-align:center;
}

.lead{
	font-size:1.25rem;
}

.contact-phone {
	color: darkgray;
}

/*----Media queries----*/
@media only screen and (min-width: 768px){
	.card {
		width:22rem;
	}
}

@media (max-width:768px){
	.index-nav-link{
		background:rgba(00, 00, 00, 0.7);
		text-align: center !important;
    	border-radius: 10px;
	}
	.nav-item{
		padding:2px;
	}

	.card-single{
		padding-bottom:70%;
	}

	.contact-heading{
		font-size:2.5rem;
		font-family: 'Lobster', cursive;
	}

	.lead{
		font-size:1rem;
	}
}

